--- a/lab-collin/package.json
+++ b/lab-collin/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.0.16",
     "winston": "^3.0.0-rc4"
   }
